fix: add vertical spacing to post lists so TOC renders one item per line

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -189,6 +189,21 @@ a {
 	margin: 1rem 0;
 }
 
+.post ul,
+.post ol {
+	margin: 1rem 0;
+	padding-left: 1.5rem;
+}
+
+.post li {
+	margin-bottom: 0.5rem;
+}
+
+.post li > ul,
+.post li > ol {
+	margin: 0.5rem 0;
+}
+
 .meta {
 	margin: 1.4rem 0;
 
